implementación de corsConfigurationSource